Added Webpack & Babel JS Dependencies - Next Reveal On Scroll Effects

--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "normalize.css": "^8.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
     "autoprefixer": "^9.1.5",
+    "babel-loader": "^8.0.4",
     "browser-sync": "^2.24.7",
     "gulp": "^3.9.1",
     "gulp-postcss": "^8.0.0",
@@ -29,6 +32,7 @@
     "postcss-import": "^12.0.0",
     "postcss-mixins": "^6.2.0",
     "postcss-nested": "^4.1.0",
-    "postcss-simple-vars": "^5.0.1"
+    "postcss-simple-vars": "^5.0.1",
+    "webpack": "^4.20.2"
   }
 }
